2002-08-20  Rachel Hestilow  <hestilow@ximian.com>

	* generator/SymbolTable.cs (Trim): Work around "void*".
	Libart has a lovely API...

2002-08-22  Mike Kestner <mkestner@speakeasy.net>

	* glib/IWrapper.cs : remove set_Handle
	* glib/Object.cs : ditto
	* glib/Opaque.cs : ditto

2002-08-22  Mike Kestner <mkestner@speakeasy.net>

	* glib/Makefile.in : rm -rf generated on make clean target
	* gnome/CanvasProxy.cs : add missing Signals hash.

2002-08-20  Rachel Hestilow  <hestilow@ximian.com>

	Ditto for generator and api.

2002-08-20  Rachel Hestilow  <hestilow@ximian.com>
	
	* parser/makefile: Rename to Makefile.in, change prefix to @prefix@.
	* configure.in: generate parser/Makefile.

2002-08-20  Rachel Hestilow  <hestilow@ximian.com>

	* makefile: Add parser to build (for install only)
	* parser/makefile: Add distclean target.

	* parser/gapi.pl: Forgot to add this.
	* api/: Replace APIs with correctly generated ones. 
	
2002-08-20  Rachel Hestilow  <hestilow@ximian.com>

	* README.generator: Added docs on using the generator.

2002-08-19  Rachel Hestilow  <hestilow@ximian.com>

	* art/Makefile.in (clean): Change to avoid bugging out on generated/CVS.
	
	* glib/ObjectManager.cs: Added. Used to be auto-generated, but
	now it can infer names, and relies on per-namespace ObjectManager
	classes to inform it of oddly-named classes.
	
	* generator/IGeneratable.cs, GenBase.cs: New "DoGenerate" property.
	* generator/*Gen.cs: Honor DoGenerate.
	* generator/CodeGenerator.cs: Support including dependency files
	which will not be generated.
	* generator/ObjectGen.cs: Generate mapping file per-namespace, as one
	that calls back to the one in glib. Only generate if the name does
	not follow the normal conventions, otherwise, GtkSharp.ObjectManager
	can infer the name.
	* generator/Parser.cs: Accept 'generate' flag to pass on to the
	IGeneratables. Parse a new toplevel element, "symbol", which adds
	a type to the SymbolTable (instead of hard-coding it).