@@ -1,3 +1,8 @@
+2002-08-23  Rachel Hestilow  <hestilow@ximian.com>
+
+	* Applied patch from Robot101 for maintainer-clean, etc.
+	Needed for packaging.
+
 2002-08-20  Rachel Hestilow  <hestilow@ximian.com>
 
 	* generator/SymbolTable.cs (Trim): Work around "void*".
